# desktop-tutorial

./: .bandit  .codecov.yml  .cursorrules  .editorconfig  .env.sample  .gitattributes  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  .prettierignore  .test_durations  .yamllint  BRAVE_SEARCH_SETUP.md  CLAUDE_REPORT_PROMPT.md  DEPLOYMENT_REPORT_PROMPT.md  EMERGENCY_FIX_COMPLETE.md  EMERGENCY_RESPONSE.md  FIRST_LAUNCH_CHECKLIST.md  GOOGLE_ANALYTICS_INTEGRATION.md  ISP_v1_IMPLEMENTATION_REPORT.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_OBSERVABILITY_PLAN.md  POLYGON_INTEGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  README_BRAVE_SEARCH.md  SAFE_OPERATION_GUIDE.md  SETUP_GUIDE.md  SYSTEM_MEMORY.md  SYSTEM_VOICE_IMPLEMENTATION.md  auto_monitor_dynamic.ps1  auto_monitor_polygon.ps1  build.ps1  check_stock.bat  clean-whitespace.ps1  config.yaml  create-composite-actions.ps1  create_n8n_workflow.js  dynamic_monitor.js  (+43 more)
.github/: codeql-analysis.yml  dependabot.yml  secret-scanning.yml
.github/actions/cache-dependencies/: action.yml
.github/actions/cache-deps/: action.yml
.github/actions/echo-action/: action.yml
.github/actions/setup-project/: action.yml
.github/workflows/: artifact-debug.yml  basic-test.yml  ci-composite.yml  ci-config-fixed.yml  ci-optimized.yml  ci-smoke-fixed.yml  ci-smoke.yml  ci-tests-optimized.yml  ci-tests.yml  ci.yml  codeql-analysis.yml  dependabot-auto-merge.yml  echo-test.yml  example-workflow.yml  license-check.yml  license-policy.yml  nightly-sbom.yml  performance-benchmark.yml  production-ci-complete.yml  production-ci.yml  publish-sbom-on-release.yml  release.yml  security-audit.yml  simple-test.yml  static-analysis.yml  test.yml  tests.yml  update-badges.yml  usage-monitor.yml
analysis/: README_DUCKDB.md  isp_connector.py  setup_duckdb.py  trade_analytics.db  trade_analytics.py
archive/emergency_mode/: emergency_action_backup.js
backup/: .pre-commit-config.yaml
config/: brave_config.json  claude_desktop_config.json  moomoo_data.json  package.json
core/: brave_search_trader.py  check_rate.py  data_connector.py  maintenance_monitor.py  test_brave.py
desktop_tutorial/providers/: yahoo.py
docs/: webhook_setup_guide.md
integrations/brave_integration/: README.md  brave_search_mcp.js  env.example  http_server.js  mcp_config.json  n8n_workflow.json  search_queries.js  setup.js  test-brave.js  test_integration.js
integrations/n8n_setup/: auto_workflow.js
integrations/n8n_setup/n8n_data/: config  database.sqlite
integrations/n8n_setup/workflows/: brave_search_integration.json
js/: alert-manager.js  error-handler.js  settings-manager.js  trend-analyzer.js
policy/: README.md  check_licenses.sh
src/core/: math_utils.py
src/desktop_tutorial/: __init__.py  cache.py
src/desktop_tutorial/providers/: base.py  yahoo.py
src/mypkg/: cache.py
src/mypkg/providers/: base.py  yahoo.py
tests/: __init__.py  test_basic.py  test_dummy.py  test_math_utils.py
tests/unit/: test_cache.py
tests/unit/providers/: test_yahoo.py
