[tool.poetry]
name = "desktop-tutorial"
version = "0.1.12"
description = "Sample desktop tutorial: fetch market data and run DCF analyses"
authors = ["Naoto Suima <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/suima-dev/desktop-tutorial"
repository = "https://github.com/suima-dev/desktop-tutorial"
documentation = "https://github.com/suima-dev/desktop-tutorial#readme"
keywords = ["finance", "yahoo-finance", "tutorial"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "desktop_tutorial", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.1.0"
pyarrow = "^16.0.0"
yfinance = "0.2.33"
python-rapidjson = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
black = "^24.0.0"
yamllint = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.1.0"
pyarrow = "^16.0.0"
yfinance = "0.2.33"
python-rapidjson = "^1.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
install-poetry = "python3 -m pip install 'poetry==1.7.1'"
Poetry = { version = "1.7.1", allow-prereleases = true }

- name: Install Poetry
  run: |
    python -m pip install --upgrade pip
    python -m pip install "poetry==1.7.1"
- name: Verify Poetry version
  run: poetry --version
- name: Show Poetry path and version
  run: |
    which poetry
    poetry --version
